# EOSTok-pytorch

./: .gitignore  CITATION.cff  CONTEXT.md  LICENSE  README.md  pyproject.toml  pyrefly.toml
.github/workflows/: smoke.yml
configs/: imagenet_b.yaml  imagenet_h.yaml  imagenet_l.yaml  imagenet_s.yaml  imagewoof_256.yaml  imagewoof_64.yaml  mnist.yaml  tiny.yaml
docs/: ar_text_conditioning_explainer.html  architecture.md
eostok/: config.py  criterion.py  data.py  ema.py  eval_fid.py  losses.py  sample.py  train.py
eostok/models/: __init__.py  ar.py  discriminator.py  eostok.py  vfm.py
imagegen/: __init__.py  config.py
imagegen/cli/: __init__.py  eval.py  sample.py  train.py
imagegen/data/: __init__.py  loader.py
imagegen/models/: __init__.py  ar.py  imagegen.py  quantizer.py  tokenizer.py  unified.py
imagegen/objectives/: __init__.py  adversary.py  criterion.py  losses.py  vfm.py
imagegen/text/: __init__.py  cache.py  conditioner.py
imagegen/training/: __init__.py  checkpoint.py  ema.py  train_loop.py
tests/: test_multimodal.py  test_smoke.py
