[project]
name = "eostok"
version = "0.1.0"
description = "Unofficial implementation of EOSTok: End-to-End Autoregressive Image Generation with 1D Semantic Tokenizer (arXiv:2605.00503)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "numpy",
    "pyyaml",
    "tqdm",
    "lpips",
]

[project.optional-dependencies]
eval = ["clean-fid"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eostok*"]
