[project]
name = "imagegen"
version = "0.1.0"
description = "Caption-conditioned autoregressive image generation with an EOSTok-style image-token training loop and frozen Qwen prefix conditioning"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "numpy",
    "pyyaml",
    "tqdm",
    "lpips",
    "datasets",
    "transformers>=4.57.0",
]

[project.optional-dependencies]
eval = ["clean-fid"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["imagegen*"]
